# netradiant-custom

./: .gitignore  CMakeLists.txt  CMakePresets.json  COMPILING.md  README.md
.github/workflows/: build.yml
cmake/: default_build_menu.xml  gamepack-multi.xml.in  gamepack-single.xml.in
gamepacks/games/: cstrike.game  ep2.game  episodic.game  garrysmod.game  hl2.game  portal.game  tf2.game
libs/: commandlib.cpp  eclasslib.h  entitylib.h  traverselib.h
libs/debugging/: debugging.h
libs/gtkutil/: accelerator.h  accelerator_translate.h  cursor.h  glfont.cpp  glwidget.cpp  spinbox.h
libs/os/: dir.h
plugins/archivevpk/: archive.cpp  plugin.cpp
plugins/entity/: entity.cpp  entity.h  plugin.cpp
plugins/image/: crn.cpp
plugins/imagevtf/: imagevtf.cpp  imagevtf.def  vtf.cpp  vtf.h
plugins/mapq3/: plugin.cpp
plugins/mapvmf/: mapvmf.def  plugin.cpp
plugins/shaders/: plugin.cpp  shaders.cpp  shaders.h
plugins/sourcemodel/: mdl.cpp  mdl.h  plugin.cpp  sourcemodel.def
plugins/vfspk3/: archive.cpp  vfs.cpp
radiant/: autosave.cpp  brushmanip.cpp  build.cpp  camwindow.cpp  console.cpp  eclass.cpp  eclass_fgd_sourcepp.cpp  entityinspector.cpp  entitylist.cpp  environment.cpp  filterbar.cpp  findtexturedialog.cpp  grid.cpp  gtkdlgs.cpp  layerswindow.cpp  main.cpp  mainframe.cpp  map.cpp  modelwindow.cpp  patchmanip.cpp  preferences.cpp  qe3.cpp  referencecache.cpp  select.cpp  textureentry.h  texwindow.cpp  xywindow.cpp
setup/data/tools/: global.xlink
